--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predev": "npx tsx scripts/sync-data.ts",
-    "dev": "next dev",
-    "build": "next build",
+    "predev": "bun scripts/sync-data.ts",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
     "sync-data": "bun scripts/sync-data.ts",
