Track embeddings and products data; add registry-based component validation
- Add data/products.json (1775 products)
- Add data/embeddings.json (20 embeddings - regenerate with: bun run generate-embeddings)
- Update .gitignore to allow tracking embeddings
- Add registry-loader.ts for scraper registry integration
- Update search.ts to use registry-based gaming tiers
- Add REGISTRY_GUIDE.md documentation

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ yarn-error.log*
 .pnpm-debug.log*
 logs/*.log
 
+# data files (generated, but embeddings can be tracked if small)
+# NOTE: embeddings.json is tracked for hackathon demo - regenerate with: bun run generate-embeddings
+# data/embeddings.json
+
 # env files (can opt-in for committing if needed)
 .env*
 
